# sanger_adna_damage

./: .gitignore  .pre-commit-config.yaml  00_process_ab1.sh  01_convert_ab1_quality.py  02_make_consensus.py  03_qc_report.qmd  04_bootstrap_damage.R  DEVELOPMENT.md  GITHUB_PAGES.md  LICENSE  Makefile  PIPELINE_EXECUTION_GUIDE.md  QC_REPORT_SUMMARY.md  README.md  SECURITY_ASSESSMENT.md  convert_hvs_consensus_to_hsd.py  flake8-report.txt  generate_report.py  pyproject.toml  renv_manager.R  requirements.txt  run_tests.py  setup.cfg  setup.py  test_min_length_implementation.py  test_qc_report.py
.github/workflows/: ci.yml  docs.yml  windows-debug.yml
browser/: README.md  index.html
browser/css/: main.css
browser/js/: abif-parser.js  chromatogram.js  core.js  export-manager.js  main.js  pipeline.js  sequence-processor.js  ui-manager.js
config/: default_config.yaml  primers.yaml
docs/: BROWSER_FEATURES.md  CI_IMPROVEMENTS.md  DOCUMENTATION_SUMMARY.md  Makefile  README.md  build_docs.sh
docs/implementation/: ACTIONS_UPDATED.md  ALIGNMENT_RECOMMENDATIONS.md  ALIGNMENT_STRATEGY.md  DOCUMENTATION_UPDATES_SUMMARY.md  DOMAIN_CONFIGURATION.md  IMPLEMENTATION_SUMMARY.md  ITERATION_COMPLETE.md  PAGES_SETUP_REQUIRED.md  PIPELINE_ALIGNMENT_AUDIT.md  PIPELINE_INTEGRATION.md  PIPELINE_STATUS_FINAL.md  PROJECT_ORGANIZATION_COMPLETE.md  QUICK_START_COMPLETE.md  README.md  REORGANIZATION_SUMMARY.md  SEQUENCE_LENGTH_IMPLEMENTATION.md  STRAND_ALIGNMENT_ANALYSIS.md
docs/source/: changelog.rst  cli_reference.rst  conf.py  configuration.rst  contributing.rst  enhanced_quality_control.rst  index.rst  installation.rst  license.rst  pipeline_workflow.rst  quickstart.rst  troubleshooting.rst  understanding_damage_analysis.rst
docs/source/api/: core.rst  index.rst
docs/source/howto/: index.rst  process_single_sample.rst
docs/source/tutorials/: first_analysis.rst  index.rst
gh-pages/: CNAME  objects.inv  searchindex.js
gh-pages/_static/: custom.css
gh-pages/doctrees/: changelog.doctree  cli_reference.doctree  configuration.doctree  contributing.doctree  index.doctree  installation.doctree  license.doctree  quickstart.doctree  troubleshooting.doctree  understanding_damage_analysis.doctree
gh-pages/doctrees/api/: core.doctree  index.doctree
gh-pages/doctrees/howto/: index.doctree  process_single_sample.doctree
gh-pages/doctrees/tutorials/: first_analysis.doctree  index.doctree
gh-pages/html/: .buildinfo
gh-pages/html/_static/: custom.js
scripts/: fix_linting.py  hsd_from_haplogrep_filtering.py  run_pipeline.py  serve_files.py
src/sanger_pipeline/: __init__.py
src/sanger_pipeline/analysis/: __init__.py  alignment_artifacts_analysis.py  reference_mutation_analysis.py
src/sanger_pipeline/cli/: __init__.py  main.py
src/sanger_pipeline/cli/commands/: __init__.py  analysis_commands.py  conversion_commands.py  hsd_commands.py  pipeline_commands.py  report_commands.py
src/sanger_pipeline/core/: __init__.py  ab1_converter.py  adna_damage_analyzer.py  consensus_builder.py  damage_analyzer.py  enhanced_ab1_converter_fixed.py  pipeline.py  primer_config.py  primer_handler.py  quality_filter.py
src/sanger_pipeline/core/damage_analysis/: __init__.py  damage_calculator.py  damage_types.py  damage_visualizer.py  sequence_aligner.py  statistical_analyzer.py
src/sanger_pipeline/core/pipeline_steps/: __init__.py  ab1_conversion_step.py  consensus_step.py  damage_analysis_step.py  hsd_conversion_step.py  region_merging_step.py  report_generation_step.py
src/sanger_pipeline/io/: __init__.py
src/sanger_pipeline/scripts/: __init__.py  bwa_aligned_hsd_converter.py  convert_hvs_consensus_to_hsd.py  convert_pipeline_to_hsd.py  diagnose_primers.py  enhanced_hsd_converter.py  generate_report.py  hybrid_regional_hsd_converter.py  regional_hsd_converter.py  whole_reference_hsd_converter.py
src/sanger_pipeline/utils/: adna_sequence_cleaner.py  constants.py  damage_plots.py  fasta_to_hsd_converter.py  helpers.py  hsd_diversity_analyzer.py  improved_fasta_to_hsd_converter.py  regional_hsd_converter.py  report_generator.py
src/sanger_pipeline/utils/plotting/: __init__.py  damage_data_collector.py  damage_plot_coordinator.py  plot_generator.py
src/sanger_pipeline/utils/report_components/: __init__.py  html_template_generator.py  report_coordinator.py  statistics_collector.py
tests/: conftest.py  test_adna_integration.py  test_integration_smoke.py
tests/test_core/: test_ab1_converter.py  test_adna_damage_analyzer.py
